[package]
name = "loco-oauth2"
version = "0.2.0"
edition = "2021"
description = "A simple oauth2 library for loco"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yinho999/loco-oauth2"
homepage = "https://loco.rs/"
keywords = ["loco", "oauth2"]
categories = ["web-programming"]

[lib]
path = "src/lib.rs"

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3

[dependencies]
async-trait = "0.1"
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie", "cookie-private"] }
# axum session
axum_session = { version = "0.14" }
cookie = { version = "0.18", features = ["private"] }
http = "1.1"
loco-rs = { version = "0.13" }
sea-orm = { version = "1", features = [
    "macros",
] }
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["serde_json", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
subtle = { version = "2.5" }
thiserror = "1"
time = "0.3"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"

[dependencies.sea-orm-migration]
version = "1"

[dev-dependencies]
axum-test = "14.4"
serde_urlencoded = "0.7.1"
wiremock = "0.6"
